correct portf list gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -263,7 +263,8 @@ header .container {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 
 .portfolio-item {
